Fixed bleeding

--- a/styles/first.css
+++ b/styles/first.css
@@ -1,10 +1,14 @@
 body {
   background-color: white;
 }
+
+.demo {
+  position: absolute;
+}
 .container {
   position: relative;
-  height: 100vh;
-  width: 100vw;
+  height: 94vh;
+  width: 100%;
 }
 
 .item-1 {
